--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,53 @@
     }
 
     // Regular
+    console.log('hello');
 
     // Interpolated
+    console.log('hellp I am a %s string', '💩');
 
     // Styled
+    // console.log('%c I am some great text', 'font-size: 50px; background: red; text-shadow: 10px 10px 0 blue;');
 
     // warning!
+    console.warn('OH NOOOO');
 
     // Error :|
+    console.error('💩');
 
     // Info
+    console.info('Crocidiles eat 3-4 people per year');
 
     // Testing
+    const p = document.querySelector('p');
+    console.assert(p.classList.contains('ouch'), 'you did not select the right element');
 
     // clearing
+    // console.clear();
 
     // Viewing DOM Elements
+    console.dir(p)
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.groupCollapsed(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old`);
+      console.log(`${dog.name} is ${dog.age * 7} dog years old`);
+      console.groupEnd(`${dog.name}`);
+    })
 
     // counting
+    console.count('Jason');
 
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/jasonm4130')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      })
 
   </script>
 </body>
